--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # APP
 spring.application.name=transaction-scheduler
 server.port=8080
+server.servlet.contextPath=/api
 
 # H2
 spring.datasource.url=jdbc:h2:mem:natixis_db
@@ -13,6 +14,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
 
 # H2 Console
 spring.h2.console.enabled=true
